# HARP-GPU

./: CMakeLists.txt  README.md  configure.hpp.in
cmake/: setup_configure.cmake
src/: CMakeLists.txt  cross_disk_base.cpp  cross_disk_base.hpp  cross_disks  kinetics7_cross_disk.cpp  kinetics7_cross_disk.hpp
src/crossdisk/: cross_disk_base.hpp
tests/: CMakeLists.txt  disort_isotropic_scattering.cpp  read_wavelength.cpp  test_mesh.cpp
